kubernetes/apps/default/minio/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.f9.casa`) || HostRegexp(`{subdomain:[a-zA-Z0-9-]+}.s3.f9.casa`)
      kind: Rule
      services:
        - name: minio
          port: 9000
      middlewares:
        - name: default-headers
          namespace: traefik
    - match: Host(`minio.f9.casa`)
      kind: Rule
      services:
        - name: minio
          port: 9001
      middlewares:
        - name: default-headers
          namespace: traefik
